# AnyFeature-VSLAM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  createVocabulary.py  download_vocabulary.py  environment.yml  vslamlab_anyfeature-dev_settings.yaml
docs/: Dependencies.md  bovisa.txt
docs/toy_sequence/: calibration.yaml  rgb.txt
include/: Converter.h  Definitions.h  FeatureExtractor.h  FeatureMatcher.h  FeatureVocabulary.h  Feature_akaze61.h  Feature_anyFeatBin.h  Feature_anyFeatNonBin.h  Feature_brisk48.h  Feature_kaze64.h  Feature_orb32.h  Feature_r2d2_128.h  Feature_sift128.h  Feature_surf64.h  Frame.h  FrameDrawer.h  Image.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  MathFunctions.h  Observation.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  System.h  Tracking.h  Types.h  Utils.h  Viewer.h  Vocabulary.h
settings/: akaze61_settings.yaml  anyFeatBin_settings.yaml  anyFeatNonBin_settings.yaml  brisk48_settings.yaml  kaze64_settings.yaml  orb32_settings.yaml  r2d2_128_settings.yaml  sift128_settings.yaml  surf64_settings.yaml
src/: Converter.cc  FeatureExtractor.cpp  FeatureMatcher.cc  Feature_akaze61.cpp  Feature_anyFeatBin.cpp  Feature_anyFeatNonBin.cpp  Feature_brisk48.cpp  Feature_kaze64.cpp  Feature_orb32.cpp  Feature_r2d2_128.cpp  Feature_sift128.cpp  Feature_surf64.cpp  Frame.cc  FrameDrawer.cc  Image.cpp  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  MathFunctions.cpp  ORBextractor.cc  Observation.cpp  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  Utils.cpp  Viewer.cc  Vocabulary.cpp  createVocabulary.cpp  mono.cpp  vslamlab_anyfeature_mono.cpp
